; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_inode.c_get_nfs_open_context.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_inode.c_get_nfs_open_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_open_context = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfs_open_context* @get_nfs_open_context(%struct.nfs_open_context* %0) #0 {
  %2 = alloca %struct.nfs_open_context*, align 8
  %3 = alloca %struct.nfs_open_context*, align 8
  store %struct.nfs_open_context* %0, %struct.nfs_open_context** %3, align 8
  %4 = load %struct.nfs_open_context*, %struct.nfs_open_context** %3, align 8
  %5 = icmp ne %struct.nfs_open_context* %4, null
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load %struct.nfs_open_context*, %struct.nfs_open_context** %3, align 8
  %8 = getelementptr inbounds %struct.nfs_open_context, %struct.nfs_open_context* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i64 @refcount_inc_not_zero(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %6
  %13 = load %struct.nfs_open_context*, %struct.nfs_open_context** %3, align 8
  store %struct.nfs_open_context* %13, %struct.nfs_open_context** %2, align 8
  br label %15

14:                                               ; preds = %6, %1
  store %struct.nfs_open_context* null, %struct.nfs_open_context** %2, align 8
  br label %15

15:                                               ; preds = %14, %12
  %16 = load %struct.nfs_open_context*, %struct.nfs_open_context** %2, align 8
  ret %struct.nfs_open_context* %16
}

declare dso_local i64 @refcount_inc_not_zero(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
